#FLOPOP-XXX: Simulating desktop mode as Flo mac app. * Fix animation issue when resize the main window or move popover (using frame animation instead). * Fix visual effect issue when animation (using frame animation instead). * Implementing the desktop mode simulation for prototype.

--- a/FLOPopupPrototypes/Supporting-Files/FLOPopupPrototypes.entitlements
+++ b/FLOPopupPrototypes/Supporting-Files/FLOPopupPrototypes.entitlements
@@ -1,14 +1,51 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
-<dict>
-	<key>com.apple.security.app-sandbox</key>
-	<true/>
-	<key>com.apple.security.files.user-selected.read-only</key>
-	<true/>
-	<key>com.apple.security.network.client</key>
-	<true/>
-	<key>com.apple.security.network.server</key>
-	<true/>
-</dict>
+    <dict>
+        <key>com.apple.security.temporary-exception.apple-events</key>
+        <array>
+            <string>com.apple.SystemEvents</string>
+            <string>com.apple.finder</string>
+            <string>com.apple.Safari</string>
+            <string>com.google.Chrome</string>
+            <string>org.mozilla.firefox</string>
+            <string>com.apple.iTunes</string>
+            <string>com.apple.Photos</string>
+            <string>com.apple.iWork.Pages</string>
+            <string>com.apple.iWork.Numbers</string>
+            <string>com.apple.iWork.Keynote</string>
+            <string>com.apple.AddressBook</string>
+            <string>com.apple.iCal</string>
+            <string>com.apple.iChat</string>
+            <string>com.apple.Preview</string>
+            <string>com.apple.systempreferences</string>
+            <string>com.apple.TextEdit</string>
+            <string>com.apple.Notes</string>
+            <string>com.apple.reminders</string>
+            <string>com.apple.Maps</string>
+            <string>com.microsoft.Word</string>
+            <string>com.microsoft.Excel</string>
+            <string>com.microsoft.Powerpoint</string>
+            <string>com.microsoft.Outlook</string>
+            <string>com.adobe.Photoshop</string>
+            <string>com.adobe.Lightroom6</string>
+            <string>com.adobe.lightroomCC</string>
+            <string>com.adobe.Acrobat.Pro</string>
+            <string>com.adobe.acrobat.reader</string>
+            <string>com.adobe.reader</string>
+            <string>com.skype.skype</string>
+            <string>com.apple.QuickTimePlayerX</string>
+            <string>com.apple.mail</string>
+            <string>org.mozilla.thunderbird</string>
+            <string>yahoo.messenger.iris</string>
+        </array>
+        <key>com.apple.security.app-sandbox</key>
+        <true/>
+        <key>com.apple.security.files.user-selected.read-only</key>
+        <true/>
+        <key>com.apple.security.network.client</key>
+        <true/>
+        <key>com.apple.security.network.server</key>
+        <true/>
+    </dict>
 </plist>
