--- a/FLOPopupPrototypes/Supporting-Files/Info.plist
+++ b/FLOPopupPrototypes/Supporting-Files/Info.plist
@@ -22,11 +22,22 @@
 	<string>1</string>
 	<key>LSMinimumSystemVersion</key>
 	<string>$(MACOSX_DEPLOYMENT_TARGET)</string>
+	<key>NSAppTransportSecurity</key>
+	<dict>
+		<key>NSAllowsArbitraryLoads</key>
+		<true/>
+	</dict>
 	<key>NSHumanReadableCopyright</key>
-	<string>Copyright © 2018 Floware. All rights reserved.</string>
+	<string>Copyright © 2019 Floware Inc. All rights reserved.</string>
 	<key>NSMainStoryboardFile</key>
 	<string>Main</string>
 	<key>NSPrincipalClass</key>
 	<string>NSApplication</string>
+	<key>SUEnableSystemProfiling</key>
+	<true/>
+	<key>SUFeedURL</key>
+	<string>http://localhost:1607/prototypes-update/prototypesAppcast.xml</string>
+	<key>SUPublicEDKey</key>
+	<string>P9rEkLRzWUJRzccMsQzcsG9fWzXZd1hwUTga+uLBd8c=</string>
 </dict>
 </plist>
